--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,12 @@
   <packaging>pom</packaging>
 
   <modules>
+    <module>microservice-gateway</module>
+    <module>microservice-eureka</module>
+    <module>microservice-config</module>
+    <module>microservice-books</module>
+    <module>microservice-users</module>
+    <module>microservice-loans</module>
   </modules>
 
   <properties>
